--- a/1._Введение_в_базовый_синтаксис_Python.ipynb
+++ b/1._Введение_в_базовый_синтаксис_Python.ipynb
@@ -93,22 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Тип переменной a: int\n",
-      "Тип переменной b1: float\n",
-      "Тип переменной b2: float\n",
-      "Тип переменной b3: int\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Динамическая типизация\n",
     "a = 1\n",
@@ -213,25 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 + 1 = 2\n",
-      "1 - 1 = 0\n",
-      "1 * 1 = 1\n",
-      "1 ** 1 = 1\n",
-      "1 / 1 = 1.0\n",
-      "1 // 1 = 1\n",
-      "1 % 1 = 0\n",
-      "-1 = -1\n",
-      "|-2| = 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"1 + 1 =\",1+1)\n",
     "print(\"1 - 1 =\",1-1)\n",
@@ -321,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -340,15 +313,7 @@
     "id": "i5q0nBGp2Bfz",
     "outputId": "f8899c71-eb62-4d52-8abf-51d9c7fbed0c"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Присвоение переменных.\n",
     "a = 1\n",
@@ -358,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -377,15 +342,7 @@
     "id": "kQRLyi6OcoOy",
     "outputId": "2b33cfa4-2859-4d1e-a6bc-15dcd01075aa"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Переопределение переменной.\n",
     "a = 1\n",
@@ -395,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -414,16 +371,7 @@
     "id": "I7m-0S0U2y5q",
     "outputId": "abb5ad33-0467-49f4-fd8d-8463c566fe2a"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 <class 'int'>\n",
-      "2.0 <class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Пример динамической типизации.\n",
     "a = 1\n",
@@ -434,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -454,19 +402,7 @@
     "id": "utHcIvfs3AIi",
     "outputId": "7a5ad0c7-9511-4466-b548-ef16d9ad59c5"
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "ignored",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-65c4944a1d0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'23'\u001b[0m  \u001b[0;31m# это строка\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Пример сильной типизации.\n",
     "a = 1\n",
@@ -485,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -504,15 +440,7 @@
     "id": "e0XKGpfu3cBT",
     "outputId": "6204df5b-219e-4b9b-a10a-05ae064f27eb"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Унарный минус.\n",
     "a = 1\n",
@@ -522,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -541,18 +469,7 @@
     "id": "s2f-qcIb3kdD",
     "outputId": "3884d263-f0ad-4ebb-cd37-aef1f288cb60"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "-1\n",
-      "2\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Арифметические операции.\n",
     "a = 1\n",
@@ -564,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -583,17 +500,7 @@
     "id": "MscApyXO3uz6",
     "outputId": "2a989ab6-75d8-4a4b-a2fd-9dbeca96c61f"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Истинное деление: 3.3333333333333335\n",
-      "Частное: 3\n",
-      "Остаток: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Деление.\n",
     "a = 11\n",
@@ -605,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -624,17 +531,7 @@
     "id": "-1ws1F3Q4KcK",
     "outputId": "00aa54a2-487d-4c60-9e33-ca9bcd5f12b2"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "-2\n",
-      "-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Остаток может быть от 0 до делителя.\n",
     "print(-10 % 3)\n",
@@ -644,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -663,16 +560,7 @@
     "id": "zjK3A5Wf4goy",
     "outputId": "88b57e69-5bbf-4fb8-8d2b-f7cc63f28d9e"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Другие операции.\n",
     "print(5 ** 2)\n",
@@ -681,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -700,35 +588,7 @@
     "id": "N2OHlPQj4tXi",
     "outputId": "321d0796-e173-4494-d248-c05e30bfd4ab"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Философия Питона как Hello World\n",
     "import this"
@@ -746,17 +606,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Общая цена составляет 12 рублей 85 копеек за 3 товаров\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "M = 1\n",
     "N = 30\n",
@@ -774,7 +626,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -788,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
