--- a/1._Введение_в_базовый_синтаксис_Python.ipynb
+++ b/1._Введение_в_базовый_синтаксис_Python.ipynb
@@ -2,13 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#функции для упрощения демо\n",
     "def get_type(var):\n",
     "    return str(type(var)).split('\\'')[1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(\"1.1\"))"
    ]
   },
   {
@@ -93,23 +110,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Тип переменной a: int\n",
+      "Тип переменной b1: float\n"
+     ]
+    }
+   ],
    "source": [
     "#Динамическая типизация\n",
     "a = 1\n",
     "print(\"Тип переменной a:\", get_type(a))\n",
     "b1 = a / 1\n",
-    "print(\"Тип переменной b1:\", get_type(b1))\n",
+    "print(\"Тип переменной b1:\", get_type(b1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Тип переменной b2: float\n",
+      "Тип переменной b3: int\n"
+     ]
+    }
+   ],
+   "source": [
     "#Потомучто результат может иметь остаток тип результата автоматически становиться плавающим \n",
     "b2 = b1 // 1\n",
     "print(\"Тип переменной b2:\", get_type(b2))\n",
     "b3 = a // 1\n",
     "print(\"Тип переменной b3:\", get_type(b3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del b3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b3)\n",
+    "b3 = 4\n",
+    "print(b3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(pow(2,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -169,6 +339,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "-23\n"
+     ]
+    }
+   ],
+   "source": [
+    "as_complicated_as_you_want_it_to_be = 23\n",
+    "asComplicatedAsYouWantItToBe = 25\n",
+    "print(3%2)\n",
+    "print(-ascomplicatedasyouwantittobe)\n",
+    "tru = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3] 1481201113408\n",
+      "[1, 4, 3] 1481201113408\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_nums = [1, 2, 3]\n",
+    "print(list_of_nums, id(list_of_nums))\n",
+    "list_of_nums[1] = 4\n",
+    "print(list_of_nums, id(list_of_nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1481124151536\n",
+      "2 1481124151568\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "print(a, id(a))\n",
+    "a = 2\n",
+    "print(a, id(a))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "MghGA0ZSsZ8_"
@@ -202,9 +438,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 + 1 = 2\n",
+      "1 - 1 = 0\n",
+      "1 * 1 = 1\n",
+      "1 ** 1 = 1\n",
+      "1 / 1 = 1.0\n",
+      "1 // 1 = 1\n",
+      "1 % 1 = 0\n",
+      "-1 = -1\n",
+      "|-2| = 2\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"1 + 1 =\",1+1)\n",
     "print(\"1 - 1 =\",1-1)\n",
@@ -251,6 +503,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "C:\\Users\\Mikhail\\AppData\\Local\\Temp/ipykernel_12160/2107923193.py:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if 1 is 1:\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -294,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -313,17 +590,30 @@
     "id": "i5q0nBGp2Bfz",
     "outputId": "f8899c71-eb62-4d52-8abf-51d9c7fbed0c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:  1  id:  1481124151536 \n",
+      "b:  1  id:  1481124151536\n",
+      "a:  2  id:  1481124151568 \n",
+      "b:  1  id:  1481124151536\n"
+     ]
+    }
+   ],
    "source": [
     "# Присвоение переменных.\n",
     "a = 1\n",
     "b = a\n",
-    "print(a, b)"
+    "print(\"a: \", a , \" id: \", id(a), \"\\nb: \", b, \" id: \", id(b))\n",
+    "a = 2\n",
+    "print(\"a: \", a , \" id: \", id(a), \"\\nb: \", b, \" id: \", id(b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -342,7 +632,15 @@
     "id": "kQRLyi6OcoOy",
     "outputId": "2b33cfa4-2859-4d1e-a6bc-15dcd01075aa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# Переопределение переменной.\n",
     "a = 1\n",
@@ -352,7 +650,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:  1  id:  1481124151536 \n",
+      "b:  2  id:  1481124151568\n",
+      "a:  2  id:  1481124151568 \n",
+      "b:  1  id:  1481124151536\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "b = 2\n",
+    "print(\"a: \", a , \" id: \", id(a), \"\\nb: \", b, \" id: \", id(b))\n",
+    "a, b = b, a\n",
+    "print(\"a: \", a , \" id: \", id(a), \"\\nb: \", b, \" id: \", id(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -371,7 +693,16 @@
     "id": "I7m-0S0U2y5q",
     "outputId": "abb5ad33-0467-49f4-fd8d-8463c566fe2a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 <class 'int'>\n",
+      "2.0 <class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Пример динамической типизации.\n",
     "a = 1\n",
@@ -382,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -402,7 +733,19 @@
     "id": "utHcIvfs3AIi",
     "outputId": "7a5ad0c7-9511-4466-b548-ef16d9ad59c5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12160/879610979.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'23'\u001b[0m  \u001b[1;31m# это строка\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
    "source": [
     "# Пример сильной типизации.\n",
     "a = 1\n",
@@ -421,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -440,17 +783,27 @@
     "id": "e0XKGpfu3cBT",
     "outputId": "6204df5b-219e-4b9b-a10a-05ae064f27eb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1481124151536\n",
+      "-1 1481124151472\n"
+     ]
+    }
+   ],
    "source": [
     "# Унарный минус.\n",
     "a = 1\n",
+    "print(a, id(a))\n",
     "a = -a\n",
-    "print(a)"
+    "print(a, id(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -469,7 +822,18 @@
     "id": "s2f-qcIb3kdD",
     "outputId": "3884d263-f0ad-4ebb-cd37-aef1f288cb60"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "-1\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# Арифметические операции.\n",
     "a = 1\n",
@@ -481,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -500,7 +864,17 @@
     "id": "MscApyXO3uz6",
     "outputId": "2a989ab6-75d8-4a4b-a2fd-9dbeca96c61f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Истинное деление: 3.6666666666666665\n",
+      "Частное: 3\n",
+      "Остаток: 2\n"
+     ]
+    }
+   ],
    "source": [
     "# Деление.\n",
     "a = 11\n",
@@ -512,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -531,7 +905,17 @@
     "id": "-1ws1F3Q4KcK",
     "outputId": "00aa54a2-487d-4c60-9e33-ca9bcd5f12b2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "-2\n",
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "# Остаток может быть от 0 до делителя.\n",
     "print(-10 % 3)\n",
@@ -541,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -560,7 +944,16 @@
     "id": "zjK3A5Wf4goy",
     "outputId": "88b57e69-5bbf-4fb8-8d2b-f7cc63f28d9e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# Другие операции.\n",
     "print(5 ** 2)\n",
@@ -569,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
