reset notebook for december

--- a/1._Введение_в_базовый_синтаксис_Python.ipynb
+++ b/1._Введение_в_базовый_синтаксис_Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(\"1.1\"))"
    ]
@@ -110,18 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Тип переменной a: int\n",
-      "Тип переменной b1: float\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Динамическая типизация\n",
     "a = 1\n",
@@ -132,20 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Тип переменной b2: float\n",
-      "Тип переменной b3: int\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Потомучто результат может иметь остаток тип результата автоматически становиться плавающим \n",
     "b2 = b1 // 1\n",
@@ -156,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,18 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(b3)\n",
     "b3 = 4\n",
@@ -185,17 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "print(pow(2,2))"
@@ -203,73 +160,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(2**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(b3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import this"
    ]
@@ -340,20 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "-23\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "as_complicated_as_you_want_it_to_be = 23\n",
     "asComplicatedAsYouWantItToBe = 25\n",
@@ -364,18 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3] 1481201113408\n",
-      "[1, 4, 3] 1481201113408\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_of_nums = [1, 2, 3]\n",
     "print(list_of_nums, id(list_of_nums))\n",
@@ -385,18 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1481124151536\n",
-      "2 1481124151568\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 1\n",
     "print(a, id(a))\n",
@@ -438,25 +324,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 + 1 = 2\n",
-      "1 - 1 = 0\n",
-      "1 * 1 = 1\n",
-      "1 ** 1 = 1\n",
-      "1 / 1 = 1.0\n",
-      "1 // 1 = 1\n",
-      "1 % 1 = 0\n",
-      "-1 = -1\n",
-      "|-2| = 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"1 + 1 =\",1+1)\n",
     "print(\"1 - 1 =\",1-1)\n",
@@ -503,27 +373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yes\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<>:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "C:\\Users\\Mikhail\\AppData\\Local\\Temp/ipykernel_12160/2107923193.py:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "  if 1 is 1:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -571,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -590,18 +442,7 @@
     "id": "i5q0nBGp2Bfz",
     "outputId": "f8899c71-eb62-4d52-8abf-51d9c7fbed0c"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a:  1  id:  1481124151536 \n",
-      "b:  1  id:  1481124151536\n",
-      "a:  2  id:  1481124151568 \n",
-      "b:  1  id:  1481124151536\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Присвоение переменных.\n",
     "a = 1\n",
@@ -613,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -632,15 +473,7 @@
     "id": "kQRLyi6OcoOy",
     "outputId": "2b33cfa4-2859-4d1e-a6bc-15dcd01075aa"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Переопределение переменной.\n",
     "a = 1\n",
@@ -650,20 +483,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a:  1  id:  1481124151536 \n",
-      "b:  2  id:  1481124151568\n",
-      "a:  2  id:  1481124151568 \n",
-      "b:  1  id:  1481124151536\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 1\n",
     "b = 2\n",
@@ -674,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -693,16 +515,7 @@
     "id": "I7m-0S0U2y5q",
     "outputId": "abb5ad33-0467-49f4-fd8d-8463c566fe2a"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 <class 'int'>\n",
-      "2.0 <class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Пример динамической типизации.\n",
     "a = 1\n",
@@ -713,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -733,19 +546,7 @@
     "id": "utHcIvfs3AIi",
     "outputId": "7a5ad0c7-9511-4466-b548-ef16d9ad59c5"
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12160/879610979.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'23'\u001b[0m  \u001b[1;31m# это строка\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Пример сильной типизации.\n",
     "a = 1\n",
@@ -764,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -783,16 +584,7 @@
     "id": "e0XKGpfu3cBT",
     "outputId": "6204df5b-219e-4b9b-a10a-05ae064f27eb"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1481124151536\n",
-      "-1 1481124151472\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Унарный минус.\n",
     "a = 1\n",
@@ -803,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -822,18 +614,7 @@
     "id": "s2f-qcIb3kdD",
     "outputId": "3884d263-f0ad-4ebb-cd37-aef1f288cb60"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "-1\n",
-      "2\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Арифметические операции.\n",
     "a = 1\n",
@@ -845,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -864,17 +645,7 @@
     "id": "MscApyXO3uz6",
     "outputId": "2a989ab6-75d8-4a4b-a2fd-9dbeca96c61f"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Истинное деление: 3.6666666666666665\n",
-      "Частное: 3\n",
-      "Остаток: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Деление.\n",
     "a = 11\n",
@@ -886,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -905,17 +676,7 @@
     "id": "-1ws1F3Q4KcK",
     "outputId": "00aa54a2-487d-4c60-9e33-ca9bcd5f12b2"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "-2\n",
-      "-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Остаток может быть от 0 до делителя.\n",
     "print(-10 % 3)\n",
@@ -925,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -944,16 +705,7 @@
     "id": "zjK3A5Wf4goy",
     "outputId": "88b57e69-5bbf-4fb8-8d2b-f7cc63f28d9e"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Другие операции.\n",
     "print(5 ** 2)\n",
@@ -962,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1019,7 +771,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1033,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
