finish class lecture

--- a/1._Введение_в_базовый_синтаксис_Python.ipynb
+++ b/1._Введение_в_базовый_синтаксис_Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(\"1.1\"))"
    ]
@@ -102,24 +110,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Тип переменной a: int\n",
+      "Тип переменной b1: float\n",
+      "Тип переменной c1: str\n"
+     ]
+    }
+   ],
    "source": [
     "#Динамическая типизация\n",
     "a = 1\n",
     "print(\"Тип переменной a:\", get_type(a))\n",
     "b1 = a / 1\n",
-    "print(\"Тип переменной b1:\", get_type(b1))"
+    "print(\"Тип переменной b1:\", get_type(b1))\n",
+    "c1 = \"1.0\"\n",
+    "print(\"Тип переменной c1:\", get_type(c1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Тип переменной b2: float\n",
+      "Тип переменной b3: int\n"
+     ]
+    }
+   ],
    "source": [
     "#Потомучто результат может иметь остаток тип результата автоматически становиться плавающим \n",
     "b2 = b1 // 1\n",
@@ -130,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "print(b3)\n",
     "b3 = 4\n",
@@ -150,9 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "print(pow(2,2))"
@@ -160,29 +206,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "print(2**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "print(b3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "import this"
    ]
@@ -253,24 +343,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "-25\n"
+     ]
+    }
+   ],
    "source": [
     "as_complicated_as_you_want_it_to_be = 23\n",
     "asComplicatedAsYouWantItToBe = 25\n",
     "print(3%2)\n",
-    "print(-ascomplicatedasyouwantittobe)\n",
+    "print(-asComplicatedAsYouWantItToBe)\n",
     "tru = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3] 4392630848\n",
+      "[1, 4, 3] 4392630848\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_nums = [1, 2, 3]\n",
     "print(list_of_nums, id(list_of_nums))\n",
@@ -280,9 +388,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4349972736\n",
+      "2 4349972768\n"
+     ]
+    }
+   ],
    "source": [
     "a = 1\n",
     "print(a, id(a))\n",
@@ -324,9 +441,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 + 1 = 2\n",
+      "1 - 1 = 0\n",
+      "1 * 1 = 1\n",
+      "1 ** 1 = 1\n",
+      "1 / 1 = 1.0\n",
+      "1 // 1 = 1\n",
+      "1 % 1 = 0\n",
+      "-1 = -1\n",
+      "|-2| = 2\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"1 + 1 =\",1+1)\n",
     "print(\"1 - 1 =\",1-1)\n",
@@ -423,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -442,7 +575,18 @@
     "id": "i5q0nBGp2Bfz",
     "outputId": "f8899c71-eb62-4d52-8abf-51d9c7fbed0c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:  1  id:  4349972736 \n",
+      "b:  1  id:  4349972736\n",
+      "a:  2  id:  4349972768 \n",
+      "b:  1  id:  4349972736\n"
+     ]
+    }
+   ],
    "source": [
     "# Присвоение переменных.\n",
     "a = 1\n",
@@ -454,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -473,19 +617,39 @@
     "id": "kQRLyi6OcoOy",
     "outputId": "2b33cfa4-2859-4d1e-a6bc-15dcd01075aa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# Переопределение переменной.\n",
     "a = 1\n",
     "a = a + 1\n",
+    "a = +1\n",
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:  1  id:  4349972736 \n",
+      "b:  2  id:  4349972768\n",
+      "a:  2  id:  4349972768 \n",
+      "b:  1  id:  4349972736\n"
+     ]
+    }
+   ],
    "source": [
     "a = 1\n",
     "b = 2\n",
@@ -496,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -515,7 +679,16 @@
     "id": "I7m-0S0U2y5q",
     "outputId": "abb5ad33-0467-49f4-fd8d-8463c566fe2a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 <class 'int'>\n",
+      "2.0 <class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Пример динамической типизации.\n",
     "a = 1\n",
@@ -526,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -546,7 +719,15 @@
     "id": "utHcIvfs3AIi",
     "outputId": "7a5ad0c7-9511-4466-b548-ef16d9ad59c5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
    "source": [
     "# Пример сильной типизации.\n",
     "a = 1\n",
@@ -565,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -584,7 +765,16 @@
     "id": "e0XKGpfu3cBT",
     "outputId": "6204df5b-219e-4b9b-a10a-05ae064f27eb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4349972736\n",
+      "-1 4349972672\n"
+     ]
+    }
+   ],
    "source": [
     "# Унарный минус.\n",
     "a = 1\n",
@@ -595,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -614,7 +804,18 @@
     "id": "s2f-qcIb3kdD",
     "outputId": "3884d263-f0ad-4ebb-cd37-aef1f288cb60"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "-1\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# Арифметические операции.\n",
     "a = 1\n",
@@ -626,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -643,9 +844,20 @@
      "user_tz": -180
     },
     "id": "MscApyXO3uz6",
-    "outputId": "2a989ab6-75d8-4a4b-a2fd-9dbeca96c61f"
+    "outputId": "2a989ab6-75d8-4a4b-a2fd-9dbeca96c61f",
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Истинное деление: 3.6666666666666665\n",
+      "Частное: 3\n",
+      "Остаток: 2\n"
+     ]
+    }
+   ],
    "source": [
     "# Деление.\n",
     "a = 11\n",
@@ -657,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -676,7 +888,17 @@
     "id": "-1ws1F3Q4KcK",
     "outputId": "00aa54a2-487d-4c60-9e33-ca9bcd5f12b2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "-2\n",
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "# Остаток может быть от 0 до делителя.\n",
     "print(-10 % 3)\n",
@@ -686,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -705,7 +927,16 @@
     "id": "zjK3A5Wf4goy",
     "outputId": "88b57e69-5bbf-4fb8-8d2b-f7cc63f28d9e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# Другие операции.\n",
     "print(5 ** 2)\n",
